@@ -7,6 +7,15 @@
     <groupId>ndr.brt</groupId>
     <artifactId>tradegs</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <junit.version>5.2.0</junit.version>
+    </properties>
+
+    <prerequisites>
+        <maven>3.5.2</maven>
+    </prerequisites>
+
     <build>
         <plugins>
             <plugin>
@@ -29,6 +38,7 @@
                 </goals>
                 <configuration>
                     <argLine>--add-modules=jdk.incubator.httpclient</argLine>
+                    <argLine>--add-opens ndr.brt.tradegs/ndr.brt.tradegs=ALL-UNNAMED</argLine>
                 </configuration>
                 <dependencies>
                     <dependency>
@@ -39,7 +49,7 @@
                     <dependency>
                       <groupId>org.junit.jupiter</groupId>
                       <artifactId>junit-jupiter-engine</artifactId>
-                      <version>5.2.0</version>
+                      <version>${junit.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
@@ -65,7 +75,7 @@
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
-            <version>3.8.0</version>
+            <version>3.8.1</version>
         </dependency>
         <dependency>
             <groupId>com.rabbitmq</groupId>
@@ -75,13 +85,13 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.7</version>
+            <version>3.8</version>
         </dependency>
         <!--test-->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.2.0</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -93,7 +103,7 @@
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
-            <version>3.1.0</version>
+            <version>3.1.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -117,10 +127,17 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.10.0</version>
+            <version>3.11.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy</artifactId>
+            <version>2.5.2</version>
             <scope>test</scope>
         </dependency>
 
     </dependencies>
+
 
 </project>
